<resources>
    <string name="app_name">Media Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search Results</string>

    <string name="filter_header">Search Criteria</string>
    <string name="filter_submitted">Good job, you can click a button. /s</string>

    <!-- search fields -->
    <string name="title_field_label">Title</string>
    <string name="title_field_hint">The title of the media item.</string>

    <!-- search submit button -->
    <string name="filter_submit">Get</string>

    <!-- media item -->
    <string name="media_item_title">Example Title</string>
    <string name="media_item_types">Example Type List</string>
    <string name="media_item_desc">Example supporting text for the media item in this list.</string>
    <string name="media_item_image">Media type such as video, game, or book.</string>
</resources>
