<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/media_card_view"
        tools:style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/media_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/media_item_image"/>

            <TextView
                android:id="@+id/media_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/media_icon"
                android:layout_toRightOf="@id/media_icon"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:text="@string/media_item_title"
                android:textAppearance="@style/CardTitle" />

            <TextView
                android:id="@+id/media_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/media_title"
                android:layout_toEndOf="@id/media_icon"
                android:layout_toRightOf="@id/media_icon"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:text="@string/media_item_types"
                android:textAppearance="@style/CardSubtitle" />

            <TextView
                android:id="@+id/media_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/media_types"
                android:layout_toEndOf="@id/media_icon"
                android:layout_toRightOf="@id/media_icon"
                android:text="@string/media_item_desc"
                android:textAppearance="@style/CardSupportingText" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
